# NHS_Referral_Management

./: .dockerignore  .gitignore  README.md  render.yaml
backend/: .env.example  package-lock.json  package.json
backend/src/: app.js  db.js  index.js
backend/src/knowledge/: wheelchairKnowledge.js
backend/src/routes/: documents.js
backend/src/schemas/: alecStrokeFields.js
backend/src/services/: geminiService.js  pdfParser.js
bn-service/: .dockerignore  Dockerfile  requirements.txt
bn-service/app/: main.py
bn-service/app/mapping/: alec_mapper.py
bn-service/app/routers/: inference.py
bn-service/app/schemas/: models.py
frontend/: next.config.ts  package.json  skills-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
python/alac-wheelchair-bn/: pyproject.toml
python/alac-wheelchair-bn/data/: scenarios.json
python/alac-wheelchair-bn/src/alac/: cli.py  inference.py  network.py  nodes.py
python/alac-wheelchair-bn/src/alac/cpts/: hidden.py  outputs.py
python/alac-wheelchair-bn/src/alac_wheelchair_bn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/alac-wheelchair-bn/tests/: test_cpts.py  test_inference.py  test_network.py  test_rules.py
testing/: requirements.md  user-stories-and-AC.md
