[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alac-wheelchair-bn"
version = "0.1.0"
description = "Bayesian network prototype for ALAC wheelchair referral screening"
requires-python = ">=3.10"
dependencies = [
    "pgmpy>=0.1.25",
    "numpy",
    "click",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
alac = "alac.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
